style: set align-items to stretch in portfolio grid and add flex 1 to work content to ensure uniform card heights

--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -50,10 +50,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 
   .app__work-item {
     width: 270px;
+    display: flex;
     flex-direction: column;
     margin: 2rem;
     padding: 1rem;
@@ -141,7 +142,10 @@
   padding: 0.5rem;
   width: 100%;
   position: relative;
+  display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
 
   h4 {
     margin-top: 1rem;
